[gd_scene load_steps=6 format=3 uid="uid://dfe5hxhkg8e2g"]

[ext_resource type="Texture2D" uid="uid://dockdnepe4ngd" path="res://icon.svg" id="1_cyfgo"]
[ext_resource type="Script" uid="uid://bbtic1jnkift" path="res://scenes/pandas/melee_panda.gd" id="1_wy3jp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d1h1o"]
radius = 17.2627

[sub_resource type="CircleShape2D" id="CircleShape2D_bax8x"]
radius = 67.0075

[sub_resource type="CircleShape2D" id="CircleShape2D_njl1r"]
radius = 32.0

[node name="meleePanda" type="CharacterBody2D"]
script = ExtResource("1_wy3jp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_d1h1o")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 0, 1)
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_cyfgo")

[node name="enemyDetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyDetectionArea"]
shape = SubResource("CircleShape2D_bax8x")

[node name="kill_Zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="kill_Zone"]
shape = SubResource("CircleShape2D_njl1r")

[connection signal="body_entered" from="enemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="enemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="body_entered" from="kill_Zone" to="." method="_on_kill_zone_body_entered"]
